--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@
 # you can make triggering commands more comfottable!
 set -g prefix C-a
 
+set-option -g history-limit 10000
+
 bind a send-prefix
 
 # Free the original `Ctrl-b` prefix keybinding.
@@ -84,11 +86,9 @@ set -g status-right-length 80
 set -g status-right '#(exec tmux ls| cut -d " " -f 1-3 |tr "\\n" "," )'
 set -g status-fg white
 set -g status-bg colour234
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
+set -g window-status-activity-style bold
+set -g pane-border-style fg=colour245
+set -g pane-active-border-style fg=colour39
+set -g message-style bg=colour221,fg=colour16,bold
 set-window-option -g automatic-rename off
 set-option -g allow-rename off
