Add kubeconfig alias

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Splitting panes.
 bind | split-window -h
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 # Moving between panes.
