--- a/tmux.conf
+++ b/tmux.conf
@@ -23,9 +23,9 @@ bind - split-window -v
 
 # Moving between panes.
 bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind n select-pane -D
+bind e select-pane -U
+bind i select-pane -R
 
 # switch panes using Ctrl-Arrow without prefix
 bind -n C-Left select-pane -L
@@ -63,9 +63,9 @@ bind -r C-l select-window -t :+
 
 # Pane resizing.
 bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r N resize-pane -D 5
+bind -r E resize-pane -U 5
+bind -r I resize-pane -R 5
 
 # reorder windows.
 bind-key -n C-S-Left swap-window -t -1
